Bug 69984 - PIVOTTABLE: Pivot table reset sorting after editing
Summary: PIVOTTABLE: Pivot table reset sorting after editing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.1.2 release
Hardware: Other Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.3.0 target:4.2.0.1 targe...
Keywords: regression
Depends on:
Blocks: Pivot-Table mab4.0
  Show dependency treegraph
 
Reported: 2013-09-30 22:17 UTC by Robert Gonzalez MX
Modified: 2021-09-13 00:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
phone calls DB for pivot table in Calc (159.11 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-09-30 22:17 UTC, Robert Gonzalez MX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gonzalez MX 2013-09-30 22:17:43 UTC
Created attachment 86878 [details]
phone calls DB for pivot table in Calc

Problem description: 
When editing layout of a pivot table that has a descending sorting orden of a data field, resets the sorting to the row field
 
Steps to reproduce:
Select data through 08/31, 4686 lines of data
Menu Data – pivot table-create – current selection
Pivot table options window
Move to page fields Month – year, type
move to row field phone
move to data area, phone(count), duration (sum), duration (mean)
select row field phone, options, options sort by phone(count), descendent

Generates Pivot Table_CallsDB_1

then

modify table range of data to 10,000 lines, or 5,000 or through 09/30 4782 lines, is the same
this action reset the table sort to ascendent order by row field, after that, editing the layout doesn't correct the table


Current behavior:
editing the layout modifiying the data range causes the table to loose the sorting, editing the layout to correct doesn't function.


Expected behavior:
Modifiying the range should refresh the table keeping the sorting configured. Editing the sorting should refresh the table with the new layout

Operating System: Windows 8
Version: 4.1.1.2 release
Comment 1 m.a.riosv 2013-09-30 22:58:41 UTC
Hi  riggr , thanks for reporting.

Reproducible, even more, modifying the sort or the layout options for the row field, are not preserved when Ok to edit layout.

Win7x64Ultimate
Version 4.0.5.2 (Build ID: 5464147a081647a250913f19c0715bca595af2f)

Regression from 3.5.7.2 (I don0t know 3.6)
Comment 2 Kohei Yoshida 2013-12-05 20:32:01 UTC
Ok. Now I know what causes this. Will have a fix shortly.
Comment 3 Commit Notification 2013-12-05 20:43:35 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7e491281d2ba71490fa22cce1e43ba91f60395e3

fdo#69984: Handle duplicate field names correctly.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-12-05 20:43:50 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ba0204675724ada537db63999d73ac8174b24949&h=libreoffice-4-2

fdo#69984: Handle duplicate field names correctly.


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2013-12-05 21:07:09 UTC
I'll call this fixed.
Comment 6 Commit Notification 2013-12-05 22:34:06 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2ea5c1b6dd1d8fda41c1c1fdc3cf994c4f9e5895&h=libreoffice-4-1

fdo#69984: Handle duplicate field names correctly.


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.