fdo#69984: Handle duplicate field names correctly.

Duplicate field names are represented in two ways: 1) 'Name' vs 'Name*' in
the UNO part of the pivot engine, and 2) Name,0 vs Name,1 which are a pair
of textural name and a numeric duplicate index in the non-UNO part of the
engine.  But some parts lost this duplicate index information and/or confused
the 2 ways of representation.  Hopefully this change will sort things out.

Change-Id: I03ae7b6c011c31ace454679837542d6d0909ecaa